# StrucDoc

./: README.md  README_CN.md  pyproject.toml  quickstart.py
.github/workflows/: test.yml
Example-PPTAgent-MinerU/: source.md
strucdoc/: __init__.py  agent.py  doc_utils.py  document.py  element.py  llms.py  utils.py
strucdoc/prompts/: heading_extract.txt
strucdoc/roles/: doc_extractor.yaml
test/: test_document.py
