[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strucdoc"
version = "0.0.1"
authors = [{ name = "Hao Zheng", email = "wszh712811@gmail.com" }]
description = "StructDoc, a tool for utilizing LLMs to structure documents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "document",
    "structure",
    "markdown",
    "llm",
    "ai",
    "document-processing",
]
dependencies = [
    "beautifulsoup4",
    "fasttext",
    "html2image",
    "huggingface-hub",
    "jinja2",
    "json_repair",
    "mistune",
    "oaib",
    "openai>=1.50.0",
    "pillow",
    "pydantic",
    "python-Levenshtein",
    "PyYAML",
    "tenacity",
    "tiktoken",
    "torch",
]

[project.urls]
"Homepage" = "https://github.com/Force1ess/StructDoc"
"Bug Tracker" = "https://github.com/Force1ess/StructDoc/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["strucdoc*"]

[tool.setuptools.package-data]
"strucdoc" = ["prompts/*.txt", "roles/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["llm: mark test as using LLM (requires OPENAI_API_KEY)"]
